# Boolean-Binary-Search-Engine

./: AVLTree.h  CMakeLists.txt  Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  SearchEngine.cpp  SearchEngine.h  UserInterface.cpp  UserInterface.h  main.cpp  porter2_stemmer.cpp
Tests/: CMakeLists.txt  tests.cpp
